# qr-scanner

./: .gitignore  Cargo.toml  README.md
.superpowers/brainstorm/15660-1777484071/state/: server-stopped
src/: desktop_cropper.rs  main.rs  overlay.rs  qr_scanner.rs
