[package]
name = "qr-scanner"
version = "0.1.0"
edition = "2021"
description = "A cross-platform QR code scanner with screen capture and clipboard integration"
license = "MIT"
repository = "https://github.com/sunqingn7/qr-scanner"

[dependencies]
eframe = "0.31"
screenshots = "0.8"
rqrr = "0.10"
arboard = "3.3"
image = "0.25"
base64 = "0.22"
rfd = "0.15"
tray-icon = { version = "0.14", optional = true }
usvg = "0.44"
resvg = "0.44"
tiny-skia = "0.11"

[target.'cfg(target_os = "windows")'.dependencies]
clipboard-win = "5.3"

[features]
system-tray = ["dep:tray-icon"]
